refactoring, code tightening.